[tool.poetry]
name = "t-strings-tutorial"
version = "0.1.0"
description = "Tutorial project for t-strings"
authors = [
    "Vlad Gavrilov <vlad.gavrilov.dev@gmail.com>",
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.14"
marimo = "^0.14.17"
ruff = "^0.12.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
